--- a/pom.xml
+++ b/pom.xml
@@ -4,8 +4,8 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.timwe.apac.sg.techtalk</groupId>
-    <name>TIMwe Tech Talk: Test Driven Development</name>
+    <groupId>com.theinit.tddpractice</groupId>
+    <name>Carlos Ble's practice: Test Driven Development</name>
     <artifactId>tdd</artifactId>
     <version>1.0-SNAPSHOT</version>
 
@@ -13,6 +13,7 @@
         <java.version>1.8</java.version>
         <junit.version>4.12</junit.version>
         <mockito-all.version>1.10.19</mockito-all.version>
+        <junit-params.version>1.0.5</junit-params.version>
     </properties>
 
     <developers>
@@ -33,6 +34,12 @@
             <groupId>org.mockito</groupId>
             <artifactId>mockito-all</artifactId>
             <version>${mockito-all.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>pl.pragmatists</groupId>
+            <artifactId>JUnitParams</artifactId>
+            <version>${junit-params.version}</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
